# angular-bazel-example

./: .bazelrc  .gitignore  BUILD  BUILD.bazel  README.md  WORKSPACE  angular-fix.js  angular-metadata.tsconfig.json  angular.json  angular.tsconfig.json  forms.ngsummary.js  index.html  package.json  postinstall.tsconfig.json
.circleci/: bazel.rc  config.yml
e2e/: BUILD.bazel
src/: BUILD  BUILD.bazel  app.component.ts  app.module.ts  app.ts  index.html  index.template.html  main.ts  require.config.js  tsconfig.json  typings.d.ts
src/app/: BUILD.bazel  app-routing.module.ts  app.component.html  app.module.ts
src/app/billing/module0/: BUILD.bazel
src/app/billing/module1/: BUILD.bazel
src/app/compute/module0/: BUILD.bazel
src/app/compute/module1/: BUILD.bazel
src/app/datastore/module0/: BUILD.bazel
src/app/datastore/module1/: BUILD.bazel
src/app/functions/module0/: BUILD.bazel
src/app/functions/module1/: BUILD.bazel
src/app/hello-world/: BUILD.bazel  hello-world.component.spec.ts
src/app/logging/module0/: BUILD.bazel
src/app/logging/module1/: BUILD.bazel
src/app/monitoring/module0/: BUILD.bazel
src/app/monitoring/module1/: BUILD.bazel
src/app/networking/module0/: BUILD.bazel
src/app/networking/module1/: BUILD.bazel
src/app/registry/module0/: BUILD.bazel
src/app/registry/module1/: BUILD.bazel
src/app/storage/module0/: BUILD.bazel
src/app/storage/module1/: BUILD.bazel
src/app/support/module0/: BUILD.bazel
src/app/support/module1/: BUILD.bazel
src/foo/: BUILD.bazel  foo.component.spec.ts  foo.component.ts  foo.module.ts
src/hello-world/: BUILD.bazel  hello-world.component.html  hello-world.component.scss  hello-world.component.ts  hello-world.module.ts
src/material/: BUILD.bazel
src/ng-conf/: BUILD.bazel  ng-conf.module.ts  ng-conf.pipe.ts
src/reducers/: BUILD.bazel
src/shared/: BUILD  shared.module.ts
src/shared/my-footer/: BUILD  my-footer.component.ts  my-footer.module.ts
src/styles/: BUILD
src/todos/: BUILD.bazel  todos.component.html  todos.module.ts
test/e2e/: protractor.on-prepare.js
tools/: bazel.rc  generate.js
tools/generator/src/: build-file.js
