package(default_visibility = ["//visibility:public"])

alias(
    name = "install",
    actual = "@nodejs//:yarn",
)

alias(
    name = "tsconfig.json",
    actual = "//src:tsconfig.json",
)

# This export allows targets in other packages to reference files that live
# in this package.
exports_files([
    # Let devserver and testing targets reference zone.js distro
    "node_modules/zone.js/dist/zone.min.js",
    "node_modules/zone.js/dist/zone-testing-bundle.js",
])

# NOTE: this will move to node_modules/BUILD in a later release
filegroup(
    name = "node_modules",
    # NB: angular & rxjs are not in this list, because we build them from sources
    srcs = glob(["/".join([
        "node_modules",
        pkg,
        "**",
        ext,
    ]) for pkg in [
        "@ngrx",
        "@types",
        "bytebuffer",
        "protobufjs",
        "protractor",
        "reflect-metadata",
        "tsickle",
        "tslib",
        "tsutils",
        "typescript",
        "zone.js",
    ] for ext in [
        "*.js",
        "*.json",
        "*.d.ts",
    ]] + [
        "node_modules/protractor/**",
    ]) + ["@build_bazel_rules_typescript//:node_modules"],
)
