package(default_visibility = ["//visibility:public"])

alias(
    name = "install",
    actual = "@nodejs//:yarn",
)

# ts_library and ng_module use the `//:tsconfig.json` target
# by default. This alias allows omitting explicit tsconfig
# attribute.
alias(
    name = "tsconfig.json",
    actual = "//src:tsconfig.json",
)

# This export allows targets in other packages to reference files that live
# in this package.
exports_files([
    # Let devserver and testing targets reference zone.js distro
    "node_modules/zone.js/dist/zone.min.js",
    "node_modules/zone.js/dist/zone-testing-bundle.js",
])

# NOTE: this will move to node_modules/BUILD in a later release
filegroup(
    name = "node_modules",
    # NB: angular & rxjs are not in this list, because we build them from sources
    srcs = glob(["/".join([
        "node_modules",
        pkg,
        "**",
        ext,
    ]) for pkg in [
        "@ngrx",
        "@types",
        "agent-base",
        "balanced-match",
        "blocking-proxy",
        "brace-expansion",
        "browserstack",
        "bytebuffer",
        "concat-map",
        "core-js",
        "es6-promisify",
        "fs.realpath",
        "glob",
        "https-proxy-agent",
        "inflight",
        "inherits",
        "jasmine-core",
        "jasmine",
        "jasminewd2",
        "jszip",
        "long",
        "minimatch",
        "ms",
        "once",
        "optimist",
        "os-tmpdir",
        "pako",
        "path-is-absolute",
        "protobufjs",
        "protractor",
        "q",
        "reflect-metadata",
        "rimraf",
        "saucelabs",
        "sax",
        "selenium-webdriver",
        "source-map-support",
        "source-map",
        "tmp",
        "tsickle",
        "tslib",
        "tsutils",
        "typescript",
        "webdriver-js-extender",
        "webdriver-manager",
        "wordwrap",
        "wrappy",
        "xml2js",
        "xmlbuilder",
        "zone.js",
    ] for ext in [
        "*.js",
        "*.json",
        "*.d.ts",
    ]] + [
        "node_modules/protractor/**",
    ]) + ["@build_bazel_rules_typescript//:node_modules"],
    # "@build_bazel_rules_typescript//:node_modules" is incluced
    # in `//:node_modules` so that npm dependencies that are hoisted to
    # node_modules/@bazel/typescript/node_modules because of conflicting
    # versions can be resolved correctly
)
