package(default_visibility = ["//visibility:public"])

load("@angular//:index.bzl", "ng_module")

ng_module(
    name = "src",
    srcs = glob(["*.ts"]),
    tsconfig = ":tsconfig.json",
    deps = [
        "//src/foo",
        "//src/hello-world",
    ],
)

# Needed because the devserver only loads static files that appear under this
# package.
genrule(
    name = "zonejs",
    srcs = ["//:node_modules/zone.js/dist/zone.min.js"],
    outs = ["zone.min.js"],
    cmd = "cp $< $@",
)

genrule(
    name = "systemjs",
    srcs = ["//:node_modules/systemjs/dist/system.js"],
    outs = ["system.js"],
    cmd = "cp $< $@",
)

load("@build_bazel_rules_typescript//:defs.bzl", "ts_devserver")

ts_devserver(
    name = "devserver",
    entry_module = "angular_bazel_example/src/main",
    scripts = ["//:angular_bundles"],
    serving_path = "/bundle.min.js",
    static_files = [
        ":zonejs",
        ":systemjs",
        "index.html",
    ],
    deps = ["//src"],
)

load("@build_bazel_rules_nodejs//:defs.bzl", "rollup_bundle", "nodejs_binary")

rollup_bundle(
    name = "bundle",
    entry_points = [
        "src/main",
        "src/foo/foo.module.ngfactory",
    ],
    deps = ["//src"],
)

nodejs_binary(
    name = "prodserver",
    args = ["src"],
    data = [
        "index.html",
        ":bundle",
        ":systemjs",
        ":zonejs",
    ],
    entry_point = "history-server/history-server.js",
)
