package(default_visibility = ["//visibility:public"])

load("@angular//:index.bzl", "ng_module")

ng_module(
    name = "src",
    srcs = glob(["*.ts"]),
    tsconfig = ":tsconfig.json",
    deps = [
      "//src/hello-world",
      "//src/todos",
    ],
)

# Needed because the devserver only loads static files that appear under this
# package.
genrule(
    name = "zonejs",
    srcs = ["//:node_modules/zone.js/dist/zone.min.js"],
    outs = ["zone.min.js"],
    cmd = "cp $< $@",
)

genrule(
    name = "storejs",
    srcs = ["//:node_modules/@ngrx/store/bundles/store.umd.min.js"],
    outs = ["store.umd.min.js"],
    cmd = "cp $< $@",
)

load("@build_bazel_rules_typescript//:defs.bzl", "ts_devserver")

ts_devserver(
    name = "devserver",
    entry_module = "angular_bazel_example/src/main",
    scripts = [":require.config.js", "//:angular_bundles"],
    serving_path = "/bundle.min.js",
    static_files = [
        ":zonejs",
        ":storejs",
        "index.html",
    ],
    deps = ["//src"],
)

load("@build_bazel_rules_nodejs//:defs.bzl", "rollup_bundle", "nodejs_binary")

rollup_bundle(
    name = "bundle",
    entry_point = "src/main",
    deps = ["//src"],
)

nodejs_binary(
    name = "prodserver",
    args = ["src"],
    data = [
        "index.html",
        ":bundle",
        ":zonejs",
    ],
    entry_point = "history-server/modules/cli.js",
)
