package(default_visibility = ["//visibility:public"])

load("@angular//:index.bzl", "ng_module")
load("@io_bazel_rules_sass//sass:sass.bzl", "sass_binary")
load("@build_bazel_rules_typescript//:defs.bzl", "ts_library", "ts_web_test")

sass_binary(
    name = "foo-styles",
    src = "foo.component.scss",
    deps = [
        "//src/shared:colors",
        "//src/shared:fonts",
    ],
)

ng_module(
    name = "foo",
    srcs = [
        "foo.component.ts",
        "foo.module.ts",
    ],
    assets = [":foo-styles"],
    tsconfig = "//src:tsconfig.json",
    deps = [
        "//src/lib",
        "@rxjs",
    ],
)

ts_library(
    name = "test_lib",
    testonly = 1,
    srcs = glob(["*.spec.ts"]),
    deps = [":foo"],
)

ts_web_test(
    name = "test",
    bootstrap = ["//:angular_bootstrap_scripts"],
    deps = [
        ":test_lib",
        "//:angular_bundles",
        "//:angular_test_bundles",
    ],
)
