load("@npm_angular_bazel//:index.bzl", "ng_module")

package(default_visibility = ["//visibility:public"])

ng_module(
    name = "material",
    srcs = glob(["*.ts"]),
    tsconfig = "//src:tsconfig.json",
    deps = [
        "@npm//@angular/core",
        "@npm//@angular/forms",
        "@npm//@angular/material",
        "@npm//@angular/platform-browser",
    ],
)
